build/log/idf_py_stderr_output_79213
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void mcpwm_example_gpio_initialize()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:21: error: 'MCPWM_UNIT_0' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13);    //Set GPIO 5 as PWM0A, to which servo is connected
      |                     ^~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:35: error: 'MCPWM0A' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13);    //Set GPIO 5 as PWM0A, to which servo is connected
      |                                   ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:55:5: error: 'mcpwm_gpio_init' was not declared in this scope
   55 |     mcpwm_gpio_init(MCPWM_UNIT_0, MCPWM0A, 13);    //Set GPIO 5 as PWM0A, to which servo is connected
      |     ^~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void mcpwm_example_servo_control(void*)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:83:5: warning: missing initializer for member 'mcpwm_timer_config_t::count_mode' [-Wmissing-field-initializers]
   83 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:83:5: warning: missing initializer for member 'mcpwm_timer_config_t::period_ticks' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:83:5: warning: missing initializer for member 'mcpwm_timer_config_t::intr_priority' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:83:5: warning: missing initializer for member 'mcpwm_timer_config_t::flags' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:86:5: error: 'mcpwm_operator_handle_t' was not declared in this scope; did you mean 'mcpwm_oper_handle_t'?
   86 |     mcpwm_operator_handle_t operator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_oper_handle_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:89:5: warning: missing initializer for member 'mcpwm_operator_config_t::intr_priority' [-Wmissing-field-initializers]
   89 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:89:5: warning: missing initializer for member 'mcpwm_operator_config_t::flags' [-Wmissing-field-initializers]
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:90:51: error: expected type-specifier before ')' token
   90 |     mcpwm_new_operator(&operator_config, &operator);
      |                                                   ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:91:42: error: 'operator,' not defined
   91 |     mcpwm_operator_connect_timer(operator, timer);
      |                                          ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:93:5: error: 'mcpwm_comparator_handle_t' was not declared in this scope; did you mean 'mcpwm_comparator_config_t'?
   93 |     mcpwm_comparator_handle_t comparator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_comparator_config_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:95:9: error: expected primary-expression before '.' token
   95 |         .flags.update_cmp_on_tep = true,
      |         ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:97:34: error: 'operator,' not defined
   97 |     mcpwm_new_comparator(operator, &comparator_config, &comparator);
      |                                  ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:97:57: error: 'comparator' was not declared in this scope
   97 |     mcpwm_new_comparator(operator, &comparator_config, &comparator);
      |                                                         ^~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:99:5: error: 'mcpwm_generator_handle_t' was not declared in this scope; did you mean 'mcpwm_generator_config_t'?
   99 |     mcpwm_generator_handle_t generator = NULL;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     mcpwm_generator_config_t
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:102:5: warning: missing initializer for member 'mcpwm_generator_config_t::flags' [-Wmissing-field-initializers]
  102 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:103:33: error: 'operator,' not defined
  103 |     mcpwm_new_generator(operator, &generator_config, &generator);
      |                                 ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:103:55: error: 'generator' was not declared in this scope
  103 |     mcpwm_new_generator(operator, &generator_config, &generator);
      |                                                       ^~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:107:5: warning: missing initializer for member 'mcpwm_timer_event_callbacks_t::on_full' [-Wmissing-field-initializers]
  107 |     };
      |     ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:107:5: warning: missing initializer for member 'mcpwm_timer_event_callbacks_t::on_stop' [-Wmissing-field-initializers]
In file included from /home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_prelude.h:17,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:118:26: error: 'MCPWM_TIMER_EVENT_TEP' was not declared in this scope; did you mean 'MCPWM_TIMER_EVENT_FULL'?
  118 |                 .event = MCPWM_TIMER_EVENT_TEP,
      |                          ^~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:55: note: in definition of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                                       ^~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:38: error: expected primary-expression before ')' token
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                      ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:117:68: note: in expansion of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  117 |             mcpwm_generator_set_action_on_compare_event(generator, MCPWM_GEN_COMPARE_EVENT_ACTION({
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:122:26: error: 'MCPWM_TIMER_EVENT_TEZ' was not declared in this scope; did you mean 'MCPWM_TIMER_EVENT_FULL'?
  122 |                 .event = MCPWM_TIMER_EVENT_TEZ,
      |                          ^~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:55: note: in definition of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                                       ^~~
/home/vicenterey/esp/idf/esp-idf/components/esp_driver_mcpwm/include/driver/mcpwm_gen.h:135:38: error: expected primary-expression before ')' token
  135 |     (mcpwm_gen_compare_event_action_t) { .direction = dir, .comparator = cmp, .action = act }
      |                                      ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:121:68: note: in expansion of macro 'MCPWM_GEN_COMPARE_EVENT_ACTION'
  121 |             mcpwm_generator_set_action_on_compare_event(generator, MCPWM_GEN_COMPARE_EVENT_ACTION({
      |                                                                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
